force-app/main/default/objects/NotifRecip__c/NotifRecip__c.object-meta.xml
<CustomObject>
    <label>Notification Recipient</label>
    <nameField>
        <displayFormat>NR-{000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>