force-app/main/default/objects/NotifRecip__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>NotificationChannel__c</referenceTo>
    <relationshipLabel>Notification Recipients</relationshipLabel>
    <relationshipName>Notification_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>