force-app/main/default/objects/NotifRecip__c/fields/NotifyTipe__c.field-meta.xml
<CustomField>
    <fullName>NotifyTipe__c</fullName>
    <label>Notify Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Exception</fullName>
            </value>
            <value>
                <fullName>Callout Exception</fullName>
            </value>
            <value>
                <fullName>DML Exception</fullName>
            </value>
            <value>
                <fullName>Limit Exception</fullName>
            </value>
            <value>
                <fullName>Opportunity Data</fullName>
            </value>
            <value>
                <fullName>Opportunity Info</fullName>
            </value>
            <value>
                <fullName>Opportunity Stage</fullName>
            </value>
            <value>
                <fullName>Order Items Error</fullName>
            </value>
            <value>
                <fullName>PAR Error</fullName>
            </value>
            <value>
                <fullName>Duplicate Detected</fullName>
            </value>
            <value>
                <fullName>General Error</fullName>
            </value>
            <value>
                <fullName>Payment 3 days</fullName>
            </value>
            <value>
                <fullName>Payment 7 days</fullName>
            </value>
            <value>
                <fullName>Payment 15 days</fullName>
            </value>
            <value>
                <fullName>Opportunity Fault</fullName>
                <isActive>false</isActive>
                <label>Opportunity Fault</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>