force-app/main/default/objects/NotifRecip__c/fields/UserGroup__c.field-meta.xml
<CustomField>
    <fullName>UserGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Group</label>
    <referenceTo>RecipientGroup__c</referenceTo>
    <relationshipLabel>Notification Recipients</relationshipLabel>
    <relationshipName>Notification_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>