force-app/main/default/objects/NotifRecip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>NotifyTipe__c</columns>
    <columns>IsEnabled__c</columns>
    <columns>User__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>